fixed overflow mobile msg

--- a/src/css/message-box.css
+++ b/src/css/message-box.css
@@ -18,7 +18,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   max-width: 600px;
   max-height: 600px;
   padding: 0 30px;
@@ -103,4 +103,13 @@
   .msg-content {
     min-height: 650px;
   }
+  .message-box-outer{
+    max-height: 100vh;
+    overflow-y: scroll;
+  }
+  .msg-content {
+    
+    min-height: 70vh;
+  }
+  
 }
